force-app/main/default/objects/smagicinteract__SMS_SenderId__c/smagicinteract__SMS_SenderId__c.object-meta.xml
<CustomObject>
    <label>SMS SenderId</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>SMS SenderIds Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS SenderIds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>