force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Code__c</fullName>
    <description>Stores the code of channel type</description>
    <inlineHelpText>Stores the code of channel type</inlineHelpText>
    <label>Channel Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>