force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Name__c</fullName>
    <label>Channel Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>