force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Configured_Manage_Notification__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Configured_Manage_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the manage notification settings are configured or not.</description>
    <label>Configured Manage Notification</label>
    <type>Checkbox</type>
</CustomField>