force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Description__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Description__c</fullName>
    <description>This field contains the description of the sender ID.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>