force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Email_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Email_Notification_Template__c</fullName>
    <defaultValue>(&quot;default&quot;)</defaultValue>
    <description>id of email template which should be used for notification</description>
    <label>Email Notification Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>