force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Enable_Email_To_Text__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Enable_Email_To_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(Optional) Specifies whether to use email to text feature or not.</description>
    <label>Enable Email To Text</label>
    <type>Checkbox</type>
</CustomField>