force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Label__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Label__c</fullName>
    <description>This field contains the label of the sender ID.</description>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>