force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Notification_Recipient__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Notification_Recipient__c</fullName>
    <defaultValue>(&quot;User assigned to Sender Id&quot;)</defaultValue>
    <description>This field contains value of the Notification Recipient. The value can be None, Last Sender, etc.</description>
    <label>Notification Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <label>Don&apos;t notify to anyone</label>
            </value>
            <value>
                <fullName>User assigned to Sender Id</fullName>
            </value>
            <value>
                <fullName>Last Sender</fullName>
            </value>
            <value>
                <fullName>Record Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>