force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Number_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Number_Type__c</fullName>
    <description>Type of the inbound number (SenderId)</description>
    <label>Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Longcode</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Shortcode</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Toll Free Number</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>WhatsApp</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Viber</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>LINE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>