force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Reply_To_Address__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Reply_To_Address__c</fullName>
    <description>(Optional) Specifies the reply to email address. (Id)</description>
    <label>Reply To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>