force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Send_Notification_From_Email__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Send_Notification_From_Email__c</fullName>
    <description>(Optional) Specifies the emailId from which mail is to be sent. (Id)</description>
    <label>Send Notification From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>