force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__senderId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__senderId__c</fullName>
    <description>This field contains the ID of the sender.</description>
    <inlineHelpText>Modifying sender ID will impact outgoing messages. Get in touch with SMS-Magic support team before updating the sender ID field.</inlineHelpText>
    <label>SenderId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>