force-app/main/default/objects/smagicinteract__SMS_SenderId__c/fields/smagicinteract__Used_For__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Used_For__c</fullName>
    <defaultValue>&quot;Both&quot;</defaultValue>
    <description>Describes the purpose of sender id</description>
    <label>Used For</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>