force-app/main/default/objects/smagicinteract__SMS_SenderId__c/listViews/smagicinteract__SenderId_View.listView-meta.xml
<ListView>
    <fullName>smagicinteract__SenderId_View</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__senderId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>SenderId View</label>
</ListView>